--- a/src/main/java/GUI/VegetableForm.form
+++ b/src/main/java/GUI/VegetableForm.form
@@ -48,7 +48,7 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="235" max="-2" attributes="0"/>
-                      <Component id="jButton1" linkSize="1" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnAdd" linkSize="1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
                       <Component id="jButton2" linkSize="1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
@@ -76,7 +76,7 @@
               <Component id="jScrollPane1" min="-2" pref="237" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jButton1" linkSize="2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnAdd" linkSize="2" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jButton2" linkSize="2" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jButton3" linkSize="2" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jButton4" linkSize="2" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -176,7 +176,7 @@
         <Property name="text" type="java.lang.String" value="VEGETABLE FORM"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="btnAdd">
       <Properties>
         <Property name="text" type="java.lang.String" value="ADD"/>
       </Properties>
